# ConfigurationService

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  Service.cc  basic_communication.hpp  basic_communicator.cc  basic_communicator.hpp  basic_data.hpp  communication.hpp  configuration.cc  configuration.hpp  configuration_service.config  container.hpp  data.hpp  dummy.cc  make-ci.sh  py_test.py  redis_communicator.hpp  redis_configuration.cc  redis_configuration.hpp  redis_utils.hpp  types.hpp  zmq_configuration.hpp
ansible/: hosts  site.yml
ansible/group_vars/all/: main.yml
ansible/tasks/: redis.yml
ansible/templates/: redis.conf.j2
ansible/vars/: main.yml
client/: .travis.yml  CMakeLists.txt  README.md  Service.cc  basic_communicator.hpp  basic_data.cc  basic_data.hpp  configuration.cc  configuration.hpp  configuration_service.config  container.cc  container.hpp  daemon.cc  dummy.cc  make-ci.sh  pyconfiguration.hpp  redis_configuration.cc  redis_configuration.hpp  redis_defs.hpp  redis_utils.cc  redis_utils.hpp  zmq_configuration.cc  zmq_configuration.hpp
client/docs/: Doxyfile
client/docs/html/: index.html
client/docs/latex/: refman.tex
client/sample/: example_instrument2.js  motb.js  revert_motb.substitutions.py
client/test/: CMakeLists.txt  communicator_test.cc  configuration_test.cc  data_manager_test.cc
python/: README.md  configuration_forwarder.py  configuration_forwarder_test.py
test/: CMakeLists.txt  communicator_test.cc  configuration_test.cc  data_manager_test.cc  example_config.js
